# django_shop

./: .example.env  .gitignore  db.json  pyproject.toml  requirements.txt
adminapp/: forms.py  urls.py  views.py
adminapp/templates/adminapp/: admin-users-read.html  admin-users-update-delete.html  base.html  index.html
authapp/: admin.py  forms.py  models.py  pipeline.py  urls.py  utils.py  views.py
authapp/migrations/: 0001_initial.py  0002_user_activation_key_user_activation_key_expires.py  0003_alter_user_activation_key_expires_alter_user_age.py  0004_alter_user_activation_key_expires_shopuserprofile.py
authapp/templates/authapp/: base.html  login.html  profile.html  register.html
basket/: models.py  urls.py  views.py
basket/migrations/: 0001_initial.py
basket/templates/basket/: basket.html
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/fixtures/: products.json
mainapp/migrations/: 0001_initial.py  0002_product_is_active_productcategory_is_active.py  0003_alter_product_category.py  0004_alter_product_category.py
mainapp/templates/mainapp/: base.html  context.html  index.html  products.html
ordersapp/: models.py  urls.py  views.py
ordersapp/migrations/: 0001_initial.py
ordersapp/templates/ordersapp/: base.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html
shop/: settings.py  urls.py
static/css/: order_detail.css
