[tool.poetry]
name = "django-shop"
version = "0.1.0"
description = ""
authors = ["cnwv <115669384+cnwv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.7.2"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.0"
cryptography = "41.0.4"
defusedxml = "0.8.0rc2"
django = "4.2.2"
django-debug-toolbar = "4.2.0"
idna = "3.4"
oauthlib = "3.2.2"
pillow = "10.0.0"
psycopg2 = "2.9.9"
pycparser = "2.21"
pyjwt = "2.8.0"
python-dotenv = "1.0.0"
python3-openid = "3.2.0"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
social-auth-app-django = "5.3.0"
social-auth-core = "4.4.2"
sqlparse = "0.4.4"
typing-extensions = "4.6.3"
urllib3 = "1.26.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
